# Lang-Graph-Fullstack

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  basic_agent.py  human_in_the_loop.py  index.py  langgraph.json  log_config.py  main.py  pyproject.toml  workflow_stage.py
.cursor/rules/: langgraph-agent.mdc  python-quality.mdc
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/api/copilotkit/[integrationId]/: route.ts
frontend/app/components/: MarkdownDocument.tsx  PlanApproval.tsx  weatherCard.tsx
frontend/app/human-in-loop/[integrationId]/: page.tsx
nodes/: __init__.py  llm_config.py  message_utils.py  prompt_loader.py  state.py
nodes/confirmation/: node.py  prompt.txt
nodes/idea_analyzer/: __init__.py  node.py  prompt.txt  stage_router.txt
nodes/idea_helper/: node.py  prompt.txt
nodes/plan/: node.py  prompt.txt
nodes/plan_feedback/: node.py  prompt.txt
nodes/response/: __init__.py  node.py  prompt.txt
nodes/tools/: web_search.py
