[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit>=0.1.79",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.7.23",
]
